# panthera_controller

./: CMakeLists.txt  README.md  package.xml  panthera_controller_plugins.xml
include/panthera_controller/: panthera_controller.h  speed_limiter.h
src/: panthera_controller.cpp  speed_limiter.cpp
